# pea-pme-portfolio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflow/: code_sanity_checks.yml
output/: peapme_assets_raw.csv  peapme_assets_with_fundamentals.csv  peapme_assets_with_fundamentals_20250815.csv  peapmea_assets_raw.csv
src/pea_pme_portfolio/: __init__.py  _build_portfolio.py  _fetch_data.py
src/pea_pme_portfolio/config/: config.json
tests/: test_build_portfolio.py  test_fetch_data.py
